--- a/src/components/landing-page.css
+++ b/src/components/landing-page.css
@@ -27,7 +27,6 @@ header {
 }
 
 .container {
-	height: 100vh;
 	min-height: 100%;
 	display: flex;
 	position: relative;
@@ -45,12 +44,7 @@ header {
 }
 
 #header {
-  background-image:
-  /* linear-gradient( */
-		/* to right bottom, */
-		/* rgba(100, 107, 98, 0.4),
-    rgba(185, 185, 185, 0.4)),   */
-    url('../assets/images/outdoor.jpg');
+  background-image: url('../assets/images/outdoor.jpg');
 	color: white;
 	background-size: cover;
 	background-repeat: no-repeat;
